# Penrose

./: LICENSE  Penrose.cabal  README.md
src/: CyclotomicNumbers.hs  Main.hs  Shapes.hs
