name:                Penrose
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bnarnold/Penrose#readme
license:             BSD3
license-file:        LICENSE
author:              Bertram Arnold
maintainer:          bertram.arnold@gmail.com
copyright:           who cares
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Penrose
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
